kubernetes/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service
  name: gateway-service
spec:
  ports:
  - name: gateway-svc-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway-service
  type: ClusterIP
